Document Jagex account login flow and confirmed local-build status